# splitwise-service

./: .gitignore  Dockerfile  README.md  build_info.json  docker-compose.yml  setup_db.py
splitwise-service/: .env  README.md  alembic.ini  docker-compose.yml  prerequisite-stetup.sh  pyproject.toml  python-setup.sh
splitwise-service/src/db/: db_interactions.py  models.py  schema.py
splitwise-service/src/utils/: consts.py
src/: config.py  main.py
src/data/: database.py  db_interactions.py  models.py  schema.py
src/db/: db_interactions.py  models.py  schema.py
src/migrations/: env.py
src/migrations/versions/: 13b1769d4da8_initial_models.py  ea2004160ed0_initial_models.py
src/services/: expense.py  group.py  meta.py  settlement.py  user.py
src/utils/: buildinfo.py  consts.py  custom_logger.py  exceptions.py
