[tool.poetry]
name = "splitwise-service"
version = "0.1.0"
description = ""
authors = ["Biprakanta Pal <biprakanta.pal@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.85.1"
uvicorn = {extras = ["standard"], version = "^0.19.0"}
python-environ = "^0.4.54"
python-dateutil = "^2.8.2"
virtualenv = "^20.16.5"
loguru = "^0.6.0"
sqlalchemy = "^1.4.42"
alembic = "^1.8.1"
psycopg2 = "^2.9.4"
pyjwt = "^2.6.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.5.0"
pylint = "^2.15.4"
black = "^22.10.0"
isort = "^5.10.1"
pre-commit = "^2.20.0"
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
